--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
-jobName=job1
-spring.batch.job.enabled=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestbancaire
-spring.datasource.username=postgres
-spring.datasource.password=root
+#jobName=composedTask
+jobName=job2
+#spring.batch.job.enabled=false
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gestbancaire
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+# PostgreSQL DB - "db1"
+db1.datasource.url=jdbc:postgresql://localhost:5432/gestbancaire
+db1.datasource.username=postgres
+db1.datasource.password=root
+db1.datasource.driver-class-name=org.postgresql.Driver
+
+
+# PostgreSQL DB - "db2"
+db2.datasource.url=jdbc:postgresql://localhost:5432/migrationv4
+db2.datasource.username=postgres
+db2.datasource.password=root
+db2.datasource.driver-class-name=org.postgresql.Driver
+spring.main.allow-bean-definition-overriding=true
