multiple datasource with cloud sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,22 @@ jobName=job2
 #spring.datasource.password=root
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
-# PostgreSQL DB - "db1"
-db1.datasource.url=jdbc:postgresql://localhost:5432/gestbancaire
-db1.datasource.username=postgres
-db1.datasource.password=root
-db1.datasource.driver-class-name=org.postgresql.Driver
+spring.cloud.gcp.sql.instance-connection-name=mobilosoft-test-batch:europe-west1:mobilosoft-bdd-123
+spring.cloud.gcp.sql.database-name=migration-batch
+spring.cloud.gcp.project-id=mobilosoft-test-batch
+
+# PostgreSQL DB - "biz"
+biz.datasource.url=jdbc:postgresql://35.195.101.148/migration-batch
+biz.datasource.username=postgres
+biz.datasource.password=postgresmobilo
+biz.datasource.driver-class-name=org.postgresql.Driver
 
 
-# PostgreSQL DB - "db2"
-db2.datasource.url=jdbc:postgresql://localhost:5432/migrationv4
-db2.datasource.username=postgres
-db2.datasource.password=root
-db2.datasource.driver-class-name=org.postgresql.Driver
+# PostgreSQL DB - "batch"
+batch.datasource.url=jdbc:postgresql://localhost:5432/migrationv4
+batch.datasource.username=postgres
+batch.datasource.password=root
+batch.datasource.driver-class-name=org.postgresql.Driver
+
+spring.batch.job.enabled=false
 spring.main.allow-bean-definition-overriding=true
